<resources>
    <string name="app_name">HamburgueriaZ</string>
    <string name="label_bacon">Bacon</string>
    <string name="label_queijo">Queijo</string>
    <string name="label_onion">Onion Rings</string>
    <string name="label_quantidade">Quantidade</string>
    <string name="label_faca_pedido">Faça seu pedido!</string>
    <string name="label_resumo">Resumo do pedido</string>
    <string name="btn_fazer_pedido">FAZER PEDIDO</string>
    <string name="hint_nome">Nome</string>
    <string name="btn_enviar">FAZER PEDIDO</string>
    <string name="erro_nome">Por favor, informe seu nome</string>
    <string name="assunto_email">Pedido de %s</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="resumo_pedido">Nome: %1$s\nQueijo: %2$s\nOnion Rings: %3$s\nQuantidade: %4$d\nTotal: R$ %5$d</string>
    <string name="total_preco">Total: R$ %d</string>
    <string name="erro_email">Nenhum aplicativo de e-mail encontrado</string>
</resources>